# SmartClinic

./: .gitignore  SmartClinic.pro  SmartClinic.sln  msvc_make.bat
build-qtemr-Desktop_Qt_5_15_2_MinGW_32_bit_static-Release/smartClinic3_autogen/: mocs_compilation.cpp
build-sc_assistant-Desktop_Qt_5_15_2_MSVC2019_32bit_static-Release/: assistant_metatypes.json
build-sc_assistant-Desktop_Qt_5_15_2_MinGW_32_bit_static-Release/: remote_assistant_metatypes.json
qtemr/: CMakeLists.txt  MyApplication.rc  README.md  TODO.txt  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  addsiblings.cpp  addsiblings.h  apptrayicon.cpp  apptrayicon.h  backup.cpp  backup.h  backup.ui  build.h  build_inc.bat  button_input_widget.cpp  button_input_widget.h  checkablesortfilterproxymodel.cpp  checkablesortfilterproxymodel.h  clickablelabel.cpp  clickablelabel.h  colorbutton.cpp  colorbutton.h  colorpicker.cpp  colorpicker.h  conditionsedit.cpp  conditionsedit.h  conditionswidget.cpp  conditionswidget.h  datahelper.cpp  datahelper.h  dataiohelper.cpp  dataiohelper.h  dboptimizer.cpp  dboptimizer.h  dieteditor.cpp  dieteditor.h  dieteditor.ui  drugexapnder.cpp  (+317 more)
qtemr/libs/: zlib.rar
qtemr/libs/zlib/msvc2017/: zlib.lib
qtemr/libs/zlib/msvc2019/: zdll.lib  zlib.lib
qtemr/res/: MyApplication.rc  banner.html  drugsIndex.db  footer.html  header.html  light.ini  resources.qrc  styleSheet.css
qtemr/src/: aboutwindow.cpp  aboutwindow.h  addsiblings.cpp  addsiblings.h  addsiblings.ui  apptrayicon.cpp  apptrayicon.h  backup.cpp  backup.h  bios.cpp  bios.h  build.h  button_input_widget.cpp  button_input_widget.h  checkablesortfilterproxymodel.cpp  checkablesortfilterproxymodel.h  clickablelabel.cpp  clickablelabel.h  colorbutton.cpp  colorbutton.h  colorpicker.cpp  colorpicker.h  conditionsedit.cpp  conditionsedit.h  conditionsedit.ui  conditionswidget.cpp  conditionswidget.h  datahelper.cpp  datahelper.h  dataiohelper.cpp  dataiohelper.h  dboptimizer.cpp  dboptimizer.h  dieteditor.cpp  dieteditor.h  dieteditor.ui  drugexapnder.cpp  drugexapnder.h  drugindex.cpp  drugindex.h  (+267 more)
qtemr/ui/: aboutwindow.ui  button_input_widget.ui  colorpicker.ui  dboptimizer.ui  drugexapnder.ui  drugindex.ui  errorlogviewer.ui  expecteddeliveries.ui  favouritedrugseditor.ui  genericonlinesearch.ui  inveslist.ui  list_style_widget.ui  mainwindow.ui  massistant.ui  miniupdater.ui  mrequestviewer.ui  printdrugs.ui  richtexteditor.ui  searchwidget.ui  settingsclass.ui  showaltdrugs.ui  text_style_editor_widget.ui  visitsbox.ui  w_development.ui  w_obgyn.ui  welcomebanner.ui  window_subwindow_widget.ui
qtemr/zlib/msvc2017/: zdll.lib
sc_assistant/: AddButton.qml  ComboBoxWithTextField.qml  PeopleList.qml  TextInputWithLabel.qml  Ui_Menu.qml  Ui_VisitorEditor.qml  WfthAl.json  backend.cpp  backend.h  broadcastlistener.cpp  broadcastlistener.h  icon.icns  main.cpp  main.qml  netclient.cpp  netclient.h  qml.qrc  qtquickcontrols2.conf  sc_assistant.pro  sc_assistant.pro.user.0900f60  sc_assistant_ar_EG.qm  sc_assistant_ar_EG.ts
sc_assistant/android/: AndroidManifest.xml
